# Capstone_project

./: .env.example  .gitignore  AI_AND_TOOLS.md  BUILD_PLAN.html  BUILD_PLAN.md  CLAUDE.md  FEEDBACK_BUILD_PLAN.md  README.md  XANGE_TOOL_ANALYSIS.md  docker-compose.yml  feedback.md  package.json
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 24d257728b12_initial_schema.py  87d6ac25ff17_m1_segments_and_company_segments.py  bd0d12029c46_m2_ai_enrichment.py  eee22276b0f1_sector_synthesis_extra.py
backend/app/: config.py  main.py
backend/app/api/: serializers.py
backend/app/api/routes/: collect.py  crm.py  enrichment.py  sectors.py  segments.py  uploads.py  verifications.py  workspaces.py
backend/app/db/: models.py  session.py
backend/app/services/: axes.py  stages.py  verification.py
backend/app/services/collect/: edgar.py  eurostat.py  http.py  registries.py  sources.py  worldbank.py
backend/app/services/ingestion/: common.py  competitor_csv.py  crm_csv.py  segment_naming.py
backend/app/services/research/: enrich.py  persist.py  sources.py  web.py
backend/app/services/synthesis/: chains.py  prompts.py
backend/scripts/: demo_competitor.csv  make_architecture_png.py  make_demo_csv.py  make_schema_png.py  normalize_segments.py  seed.py
backend/tests/: test_axes.py  test_collect.py  test_ingestion.py  test_research_sources.py  test_stages.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.jsx  (+1 more)
src/: App.jsx  index.css
(+35 files in other folders)
