[project]
name = "xange-backend"
version = "0.1.0"
description = "XAnge Market Intelligence Platform — backend (FastAPI + Postgres)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "pandas>=2.2",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-openai>=1.2.2",
    "tavily-python>=0.7.25",
    "trafilatura>=2.0.0",
    "playwright>=1.60.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "matplotlib>=3.9",   # diagram generators (scripts/make_*_png.py)
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
